some basic layout structure to admin dashboard

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,3 +11,8 @@
     text-transform: uppercase;
     font-size: 1.5rem;
 }
+
+#dashboard_actions{
+    border-left: 4px solid rgb(190, 189, 189);
+    height: calc(100vh - 300px);
+}
